# speakerfocus

./: .gitignore  LICENSE  Makefile  README.md  go.work  go.work.sum
dev/observability/: Makefile  compose.yaml
dev/observability/grafana/dashboards/: speakerfocus.json
dev/observability/grafana/provisioning/dashboards/: speakerfocus.yml
dev/observability/prometheus/: prometheus.yml
docs/: realtime-latency.md  vad-audio-core.md
proto/audio_core/v1/: audio_core.proto
services/audio-core-python/: README.md  pyproject.toml
services/audio-core-python/src/audio_core/: __init__.py
services/audio-core-python/src/audio_core/v1/: __init__.py  audio_core_pb2.py  audio_core_pb2_grpc.py
services/audio-core-python/src/speakerfocus_audio_core/: __init__.py  server.py  vad.py
services/orchestrator-go/: Makefile  go.mod
services/orchestrator-go/cmd/speakerfocusd/: main.go
services/orchestrator-go/internal/audio/: types.go
services/orchestrator-go/internal/audiocore/: client.go
services/orchestrator-go/internal/audiocorepb/: audio_core.pb.go  audio_core_grpc.pb.go
services/orchestrator-go/internal/audioio/discard/: sink.go
services/orchestrator-go/internal/audioio/wav/: looping_source.go  sink.go  source.go
services/orchestrator-go/internal/observability/: metrics.go  server.go
services/orchestrator-go/internal/pipeline/: runner.go  runner_test.go
services/orchestrator-go/internal/policy/: vad.go  vad_test.go
